Fix Find menu with selection

--- a/src/cascadia/TerminalControl/TermControl.xaml
+++ b/src/cascadia/TerminalControl/TermControl.xaml
@@ -81,6 +81,10 @@
                               x:Uid="SelectOutputWithSelectionButton"
                               Click="_SelectOutputHandler"
                               Icon="AlignLeft" />
+                <AppBarButton x:Name="SearchCommandSelectionButton"
+                              x:Uid="SearchCommandSelectionButton"
+                              Click="_SearchCommandHandler"
+                              Icon="Find" />
             </mux:CommandBarFlyout.SecondaryCommands>
         </mux:CommandBarFlyout>
 
