Add a right margin to the suggestion description textblock (#18780)
This ensures that the vertical scrollbar will not cover the description text.
Closes #18545

(cherry picked from commit f83b98e100ff9ba8dc244d820ab79604f20ed373)
Service-Card-Id: PVTI_lADOAF3p4s4AxadtzgZX-v4
Service-Version: 1.23

--- a/src/cascadia/TerminalApp/SuggestionsControl.xaml
+++ b/src/cascadia/TerminalApp/SuggestionsControl.xaml
@@ -230,6 +230,7 @@
                               VerticalScrollMode="Enabled"
                               Visibility="Visible">
                     <TextBlock x:Name="_descriptionComment"
+                               Margin="0,0,20,0"
                                IsTextSelectionEnabled="True"
                                TextWrapping="WrapWholeWords" />
                 </ScrollViewer>
